--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,7 @@ html {
 }
 
 body {
+  overflow: hidden;
   font-size: 1.6rem;
   margin: 0;
   font-family: Helvetica, sans-serif;
